@@ -22,6 +22,22 @@ def ignored(*exceptions):
         pass
 
 
+class cd:
+    """
+    Context manager for changing the current working directory.
+    Taken from here: https://stackoverflow.com/questions/431684/
+    """
+    def __init__(self, newPath):
+        self.newPath = os.path.expanduser(newPath)
+
+    def __enter__(self):
+        self.savedPath = os.getcwd()
+        os.chdir(self.newPath)
+
+    def __exit__(self, etype, value, traceback):
+        os.chdir(self.savedPath)
+
+
 def no_comments(text):
     r"""
     Remove comments from tex file, partially inspired by this:
